site-styles: Fix ordering z-index for navbar elements
Otherwise, in some situations, the contents of the dropdown would be
occluded by the page contents.

--- a/site-styles/bootstrap2-compat.less
+++ b/site-styles/bootstrap2-compat.less
@@ -133,6 +133,7 @@ body > .navbar {
 		top: 0;
 		left: 0;
 		right: 0;
+		z-index: 1050;
 	}
 }
 
